assets/css/site.css
@import url(http://fonts.googleapis.com/css?family=Lato:400,700);

/* global settings */
body {
  font-family: 'Lato', 'sans-serif';
  padding-bottom:60px;
  padding-top:60px;
}

@media (max-width: 992px) {
  body {
    padding-bottom: 120px;
  }
}

.page-header{
  margin: 10px 0;
  text-align:center;
  padding-bottom:25px;
}
.page-header h1{
  margin: 0;
}


/*navbar stuff*/
.name-holder{
  padding:10px;
  color: #002E62;
}


/*Primary navigation bar*/

.navbar .navbar-brand {
  padding: 0px;
}
.navbar .navbar-brand img {
  width: 50px;
}

.navbar-right li{
  font-size: 20px;
}
@media (max-width: 992px) {
  #main-menu li{
    font-size: 15px;
  }
  #main-menu li a {
    padding-left: 10px;
    padding-right: 10px;
  }
}


/*makes an anchor inactive(not clickable)*/

.inactive-link {
   pointer-events: none;
   cursor: default;
}

/*blog stuff */
.blog-short{
  border-bottom:1px solid #ddd;
  padding-bottom:30px;

}
.blog-short .excerpt{
  min-height:100px;
}

.blog-short img {
    width: 100px;
    height: 100px;
}

.margin10{margin-bottom:10px; margin-right:10px;}


/*footer*/
.footer {
    background-color: #f5f5f5;
    bottom: 0;
    min-height: 10px;
    position: fixed;
    width: 100%;
    font-weight: bold;
}


/* utility classes */
.no-margin:{
  margin:0;
}
.border-bottom{
    border-bottom: 1px solid #eee;
}
.centered-text{
  text-align: center;
}

